updated actions to push wifi credentials to authservice

--- a/frontendrest/platforms/android/app/src/main/res/xml/config.xml
+++ b/frontendrest/platforms/android/app/src/main/res/xml/config.xml
@@ -24,7 +24,7 @@
     <name>NFConn</name>
     <description>An awesome Ionic/Cordova app.</description>
     <author email="hi@ionicframework" href="http://ionicframework.com/">Ionic Framework Team</author>
-    <content original-src="index.html" src="http://172.29.114.188:8100" />
+    <content src="index.html" />
     <access origin="*" />
     <allow-intent href="http://*/*" />
     <allow-intent href="https://*/*" />
@@ -34,6 +34,7 @@
     <allow-intent href="geo:*" />
     <allow-navigation href="http://192.168.64.1:8100" />
     <allow-navigation href="http://172.29.114.188:8100" />
+    <allow-navigation href="http://172.29.96.63:8100" />
     <allow-intent href="market:*" />
     <icon density="ldpi" src="resources/android/icon/drawable-ldpi-icon.png" />
     <icon density="mdpi" src="resources/android/icon/drawable-mdpi-icon.png" />
